# FootageTrimmer

./: CMakeLists.txt  FootageTrimmer.cpp  FootageTrimmer.h  ImgDiffProcessor.cpp  ImgDiffProcessor.h  ImgSimilarityProcessor.cpp  ImgSimilarityProcessor.h  Makefile  main.cpp
